# agent-framework-dev-ui-demo

./: .env_example  README.md  agent.py  magentic_workflow_as_agent.py  main.py  pyproject.toml  workflow.py
